--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,7 @@
     "start": "node ../../dist/api/src/server.js"
   },
   "dependencies": {
+    "@fastify/cors": "8",
     "@prisma/client": "6.19.0",
     "croner": "^9.1.0",
     "dotenv": "16.4.5",
